cmake_minimum_required(VERSION 3.25)
project(MarketReplay VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(MarketReplay src/main.cpp)

target_include_directories(MarketReplay PRIVATE
    include    
)